no more homepage

--- a/mentors.html
+++ b/mentors.html
@@ -14,19 +14,19 @@ a similar project in future quarters. </p>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i> Prerequisites: </i> None; interest in programming encouraged
 </li>
-<li style="padding:0px;margin:0px 20px 0px;"> <i> As a concept, the Gaussian distribution, often referred to as the normal distribution or the bell curve, has cemented itself in the public consciousness. But what about its finite dimensional generalization, the multivariate Gaussian? Or its infinite dimensional counterpart, the Gaussian process? This project has two main aims: first, to discuss and explore how Gaussian processes arise in various subfields like machine learning and spatial statistics; and second, to develop notes (or a website) that explain Gaussian processes to a general audience. Of course, the exact focus of this project is flexible, based on the reader's interests/background.
-</i> </li>
+<li style="padding:0px;margin:0px 20px 0px;"> As a concept, the Gaussian distribution, often referred to as the normal distribution or the bell curve, has cemented itself in the public consciousness. But what about its finite dimensional generalization, the multivariate Gaussian? Or its infinite dimensional counterpart, the Gaussian process? This project has two main aims: first, to discuss and explore how Gaussian processes arise in various subfields like machine learning and spatial statistics; and second, to develop notes (or a website) that explain Gaussian processes to a general audience. Of course, the exact focus of this project is flexible, based on the reader's interests/background.
+</li>
 </p>
   <h4> Kristof Glauninger: Nonparametric Regression </h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
       <li style="padding:0px;margin:0px 20px 0px;"> <i> Prerequisites: </i> Familiarity with linear regression and basic probability, comfort with algebra, some calculus
  </li>
-<li style="padding:0px;margin:0px 20px 0px;"> <i> Nonparametric statistical methods
+<li style="padding:0px;margin:0px 20px 0px;"> Nonparametric statistical methods
   have seen an explosion in popularity as datasets have increased in size and complexity.
   The goal of this project will be to introduce students who are familiar with parametric regression
   models to a nonparametric setting. We will explore some of the basic theory and applications of these models,
   as well as an interesting case where we can achieve parametric convergence rates in a nonparametric setting.
-</i> </li>
+</li>
   </p>
   <h4>Zhaoqi Li</h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
@@ -50,7 +50,7 @@ a similar project in future quarters. </p>
   <h4>Shane Lubold: Random Graphs </h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
       <li style="padding:0px;margin:0px 20px 0px;"> <i> Prerequisites: </i> Some exposure to probability. Some exposure to, or an interest in, graph theory. </li>
-      <li style="padding:0px;margin:0px 20px 0px;"> In this project, we will study random graph theory and how the behavior of these graphs change as the size of the graph grows. We will focus primarily on a simple graph model with a number of interesting properties, the Erdös-Rényi model. In this simple model, we generate a graph on n nodes, where each node connects to any other node with probability p(n), which can depend on the graph size n. We will use theory and simulations to derive key properties of this model, such as the distribution of the degree of a vertex or the number of cliques of any size. We will also explore other exciting properties of this model. For example, if the ratio p*n grows at a certain rate as n gets big, then the graph will, for example, exhibit large cliques with probability 1. The proof of these ideas uses only basic statistical ideas. We will prove the conditions that guarantee this behavior and use simulations to explore how large the graphs must be the see this behavior. This project will expose students to the exciting field of random graphs and will give them a good understanding of how simple statistical tools can answer complex questions.</li>
+      <li style="padding:0px;margin:0px 20px 0px;"> In this project, we will study random graph theory and how the behavior of these graphs change as the size of the graph grows. We will focus primarily on a simple graph model with a number of interesting properties, the Erdös-Rényi model. In this simple model, we generate a graph on n nodes, where each node connects to any other node with probability p(n), which can depend on the graph size n. We will use theory and simulations to derive key properties of this model, such as the distribution of the degree of a vertex or the number of cliques of any size. We will also explore other exciting properties of this model. For example, if the ratio p*n grows at a certain rate as n gets big, then the graph will, for example, exhibit large cliques with probability 1. The proof of these ideas uses only basic statistical ideas. We will prove the conditions that guarantee this behavior and use simulations to explore how large the graphs must be the see this behavior. This project will expose students to the exciting field of random graphs and will give them a good understanding of how simple statistical tools can answer complex questions. </li>
   </p>
   <h4>Bryan Martin: R Package Development </h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
@@ -72,7 +72,7 @@ Often, sparsity is imposed through penalization, where we include a term in our 
     <li style="padding:0px;margin:0px 20px 0px;"> In most statistics classes, the data you work with are numbers. Text documents
       such as books, articles, and speeches provide massive sources of data that can not be analyzed using the tools from your introductory statistics
       courses. We will explore the field of statistical natural language processing and discuss classification and clustering techniques for text data.
-      Applications of such techniques include translation, fake news detection, and sentiment analysis.
+      Applications of such techniques include translation, information retrieval, fake news detection, and sentiment analysis.
       After reviewing the literature to get a sense of the general techniques in NLP, we will select a particular
       text dataset and research question and work on an applied project.
  </li>
