--- a/undergrads.html
+++ b/undergrads.html
@@ -20,6 +20,7 @@ title:  'Undergraduates'
   <p>
   As an undergraduate, you should expect to commit around 4 hours per week to independent reading related to your project.
   You are required to meet with your graduate mentor once a week for an hour, and at the end of the quarter
-  you will complete a writeup of your project and you will give a 10 minute presentation to the other participants.
+  you will complete a writeup of your project and you will give a 10 minute presentation to the other participants. You may register
+  for 1 credit of Stat 398 for this work.
 </p>
 </div>
