--- a/index.html
+++ b/index.html
@@ -41,7 +41,41 @@ title:  'SPA Directed Reading Program'
 </p>
 </div>
 
-</div>
+<p>
+<h3> Program Goals</h3>
+<p>
+<ul>
+<li> Build community between undergraduates and graduates in the University of Washington department of
+statistics. </li>
+<li> Provide undergraduates with opportunities to engage with statistics outside of the traditional
+curriculum </li>
+<li> Provide undergraduates with valuable independent learning and communication skills. </li>
+<li> Encourage undergraduates from traditionally underrepresented backgrounds to explore statistics. </li>
+<li> Provide graduate students with mentoring opportunities </li>
+</ul>
+</p>
+<h3> Intended Audience </h3>
+<p>
+  Currently, UW undergraduates who enjoy their introductory statistics courses may need to
+  wait many quarters before taking additional statistics courses. We would like to provide opportunities
+  for these students to continue with statistics during this break and not lose momentum. Therefore, we hope that
+  many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
+  is a course where students should learn the basics of statistical literacy, probability, and inference.
+  We understand that many mentors may want to mentor undergraduates in projects that require more prerequisites
+  than this. Some mentors may specify additional prerequisites for their topic, such as Linear Algebra, CSE 142/143,
+  or Stat 340.
+ </p>
+<h3> Program Structure</h3>
+<p>
+<ul>
+<li> Mentor chooses broad topic in statistics and a set of related readings that are accessible to undergraduates </li>
+<li> Mentor and mentee meet for 1 hour per week during the 10 week quarter to discuss readings. </li>
+<li> Aroung week 6, mentor and mentee transition from reading broad texts to focusing on a specific project
+that interests the mentee. The mentee begins planning a final talk and writeup, with feedback
+from the mentor. </li>
+<li> Last week of quarter- All mentors and all mentees attend final presentation session and pizza party. </li>
+</ul>
+</p>
 
   <div class="col-md-12">
  <div style="position: relative; bottom: -30px;">
