--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ title:  'SPA Directed Reading Program'
         to apply. There will be projects catered to various levels of
          statistical experience. For more information about the program goals, see the <a href="https://anna-neufeld.github.io/spa_drp/about.html"> about </a> page.
 </p>
+</div>
 
+<div class="col-md-8">
 <p>
 <h3> Program Goals</h3>
 <p>
