--- a/mentors.html
+++ b/mentors.html
@@ -28,7 +28,7 @@ a similar project in future quarters. </p>
   as well as an interesting case where we can achieve parametric convergence rates in a nonparametric setting.
 </li>
   </p>
-  <h4>Zhaoqi Li</h4>
+  <h4>Zhaoqi Li: Statistical Machine Learning and Data Analysis</h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
       <li style="padding:0px;margin:0px 20px 0px;"> <i> Prerequisites</i> Some familiarity of basic statistical background
         and probability theory in the level of STAT 311;
