modifyinh home page

--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@ title:  'SPA Directed Reading Program'
  A Directed Reading Program is a one-on-one mentoring program in which graduate students mentor
  undergrads in reading projects. Initiated by graduate students in mathematics at the
  Universiy of Chicago in 2003, DRPs now run in mathematics departments at 17 institutions around
- the country. DRPs foster community between graduate
- students and undergraduates, help undergraduates develop vital academic skills and engage with material
- outside of the classroom, and provide graduate students with valuable mentoring experience. For more information, see the webpage of the <a href = "https://www.drp-network.org/"> DRP Network </a>.
+ the country. For more information, see the webpage of the <a href = "https://www.drp-network.org/"> DRP Network </a>.
   </p>
-  <h2 class="featurette-heading">What is SPA? </h2>
+  </div>
+<div class="col-md-8">
+  <h2 class="featurette-heading">What is the SPA DRP? </h2>
   <p>
-    SPA is the undergraduate Statistics and Probability Association at the University of Washington.
-    </p>
-      <h2 class="featurette-heading">What is the SPA DRP? </h2>
-      <p>
-        Our program will run for the first time during Winter Quarter, 2020. We invite students
-        from all mathematical, statistical, and personal backgrounds
-        to apply. There will be projects catered to various levels of
-         statistical experience. For more information about the program goals, see the <a href="https://anna-neufeld.github.io/spa_drp/about.html"> about </a> page.
+    SPA is the undergraduate Statistics and Probability Association at the University of Washington. Our program,
+    which will match undergraduates with PhD students in the Department of Statistics at the University of Washington,
+  will run for the first time during Winter Quarter, 2020. We invite students
+    from all mathematical, statistical, and personal backgrounds
+    to apply. There will be projects catered to various levels of
+    statistical experience, and the program is open to majors and non-majors.
 </p>
 </div>
-
 <div class="col-md-8">
 <p>
 <h3> Program Goals</h3>
@@ -63,12 +60,13 @@ curriculum </li>
 <h3> Program Structure</h3>
 <p>
 <ul>
-<li> Mentor chooses broad topic in statistics and a set of related readings that are accessible to undergraduates </li>
+<li> Mentor chooses broad topic in statistics and a set of related readings that are accessible to undergraduates. </li>
 <li> Mentor and mentee meet for 1 hour per week during the 10 week quarter to discuss readings. </li>
-<li> Aroung week 6, mentor and mentee transition from reading broad texts to focusing on a specific project
-that interests the mentee. The mentee begins planning a final talk and writeup, with feedback
+<li> Midway through the quarter, mentor and mentee transition from reading broad texts to focusing on a specific project
+that interests the mentee. The mentee begins planning a final talk and writeup with feedback
 from the mentor. </li>
-<li> Last week of quarter- All mentors and all mentees attend final presentation session and pizza party. </li>
+<li> During the last week of quarter all mentors and all mentees attend final presentation session
+   and celebration / pizza party. </li>
 </ul>
 </p>
 </div>
