Still editing homepage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title:  'SPA Directed Reading Program'
 </div>
 <div class="col-md-8">
 <p>
-<h3> Program Goals</h3>
+<h2 class="featurette-heading"> Program Goals </h2>
 <p>
 <ul>
 <li> Build community between undergraduates and graduates in the University of Washington department of
@@ -46,18 +46,16 @@ curriculum </li>
 <li> Provide graduate students with mentoring opportunities </li>
 </ul>
 </p>
-<h3> Intended Audience </h3>
+<h2 class="featurette-heading"> Intended Audience </h2>
 <p>
-  Currently, UW undergraduates who enjoy their introductory statistics courses may need to
-  wait many quarters before taking additional statistics courses. We would like to provide opportunities
-  for these students to continue with statistics during this break and not lose momentum. Therefore, we hope that
-  many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
+  We hope that many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
   is a course where students should learn the basics of statistical literacy, probability, and inference.
-  We understand that many mentors may want to mentor undergraduates in projects that require more prerequisites
-  than this. Some mentors may specify additional prerequisites for their topic, such as Linear Algebra, CSE 142/143,
+   Some mentors may specify additional prerequisites for their topic, such as Linear Algebra, CSE 142/143,
   or Stat 340.
  </p>
-<h3> Program Structure</h3>
+ </div>
+ <div class="col-md-8">
+<h2 class="featurette-heading"> Intended Audience </h2>
 <p>
 <ul>
 <li> Mentor chooses broad topic in statistics and a set of related readings that are accessible to undergraduates. </li>
