Making the homepage more concise

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@ title:  'SPA Directed Reading Program'
   <p>
     SPA is the undergraduate Statistics and Probability Association at the University of Washington. Our program,
     which will match undergraduates with PhD students in the Department of Statistics at the University of Washington,
-  will run for the first time during Winter Quarter, 2020. We invite students
-    from all mathematical, statistical, and personal backgrounds
-    to apply. There will be projects catered to various levels of
-    statistical experience, and the program is open to majors and non-majors.
+  will run for the first time during Winter Quarter, 2020.
 </p>
 </div>
 <div class="col-md-8">
@@ -46,20 +43,27 @@ curriculum </li>
 <li> Provide graduate students with mentoring opportunities </li>
 </ul>
 </p>
+</div>
+<div class="col-md-8">
 <h2 class="featurette-heading"> Intended Audience </h2>
 <p>
-  We hope that many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
+  We invite students
+    from all mathematical, statistical, and personal backgrounds
+    to apply. There will be projects catered to various levels of
+    statistical experience, and you do not need to be a statistics major to apply to our program. 
+ We hope that many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
   is a course where students should learn the basics of statistical literacy, probability, and inference.
    Some mentors may specify additional prerequisites for their topic, such as Linear Algebra, CSE 142/143,
   or Stat 340.
  </p>
  </div>
  <div class="col-md-8">
-<h2 class="featurette-heading"> Intended Audience </h2>
+<h2 class="featurette-heading"> Program Structure </h2>
 <p>
 <ul>
 <li> Mentor chooses broad topic in statistics and a set of related readings that are accessible to undergraduates. </li>
-<li> Mentor and mentee meet for 1 hour per week during the 10 week quarter to discuss readings. </li>
+<li> Mentor and mentee meet for 1 hour per week during the 10 week quarter to discuss readings. Undergraduates
+are expected to spend 3-4 hours per week preparing for these meetings. </li>
 <li> Midway through the quarter, mentor and mentee transition from reading broad texts to focusing on a specific project
 that interests the mentee. The mentee begins planning a final talk and writeup with feedback
 from the mentor. </li>
