--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title:  'SPA Directed Reading Program'
 
 
 <div class="col-md-8">
-  <h2 class="featurette-heading">About </h2>
+  <h2 style="padding-top: 15px;" class="featurette-heading">About </h2>
   <p class="lead">
   Welcome to the homepage for the Directed Reading program of the <a href = "http://students.washington.edu/spassc/">Statistics and Probability Association</a>
   (SPA) at the University of Washington.
@@ -50,7 +50,7 @@ curriculum </li>
   We invite students
     from all mathematical, statistical, and personal backgrounds
     to apply. There will be projects catered to various levels of
-    statistical experience, and you do not need to be a statistics major to apply to our program. 
+    statistical experience, and you do not need to be a statistics major to apply to our program.
  We hope that many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
   is a course where students should learn the basics of statistical literacy, probability, and inference.
    Some mentors may specify additional prerequisites for their topic, such as Linear Algebra, CSE 142/143,
