--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title:  'Contact'
 ---
 
 <div style="padding-top: 30px;" class="col-md-8">
-  <h2 class="featurette-heading">Contact </h2>
+  <h2 class="featurette-heading">  </h2>
   <p class="lead">
   Please contact the program organizers with any questions.
   <h4> Student Organizing Committee: </h4>
