--- a/undergrads.html
+++ b/undergrads.html
@@ -4,7 +4,7 @@ title:  'Undergraduates'
 ---
 
 <div style="padding-top: 30px;" class="col-md-8">
-  <h2 class="featurette-heading">Information For Undergraduates: </h2>
+  <h2 class="featurette-heading"> </h2>
   <p class="lead">
   <h3> Who should apply? </h3>
   <p>
