--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title:  'SPA Directed Reading Program'
 
 
 <div class="col-md-8">
-  <h2 style="padding-top: 30px;" class="featurette-heading">About </h2>
+  <h2 style="padding-top: 40px;" class="featurette-heading"> </h2>
   <p class="lead">
   Welcome to the homepage for the Directed Reading program of the <a href = "http://students.washington.edu/spassc/">Statistics and Probability Association</a>
   (SPA) at the University of Washington.
