--- a/mentors.html
+++ b/mentors.html
@@ -4,8 +4,8 @@ title:  'Current Mentors and Project Descriptions'
 ---
 
 
-<div style="padding-top: 30px;" class="col-md-8">
-  <h2 class="featurette-heading">Winter 2020, Mentors and Projects: </h2>
+<div class="col-md-8">
+  <h2 style="padding-top: 30px;" class="featurette-heading">Winter 2020</h2>
   <p> The following projects are available in Winter 2020. Note that if two projects are listed for the same mentor,
   only one of the projects will run this quarter. Feel free to express interest in multiple projects with the same mentor
 on your application, as it will inform us of interest in a particular topic and we can attempt to offer
