Added application deadline

--- a/undergrads.html
+++ b/undergrads.html
@@ -15,7 +15,8 @@ title:  'Undergraduates'
   <h3> How to apply? </h3>
   <p>
   The Winter 2020 application can be found
-  <a href = "https://docs.google.com/forms/d/e/1FAIpQLSe4-eyOvnf1cGIExP_-PFufoQjyTkZfUbvcMGbZGBmFZRTB7A/viewform?usp=sf_link" > here </a> </p>
+  <a href = "https://docs.google.com/forms/d/e/1FAIpQLSe4-eyOvnf1cGIExP_-PFufoQjyTkZfUbvcMGbZGBmFZRTB7A/viewform?usp=sf_link" > here </a>. The application
+deadline is 12/15/2019 at 11:59pm. </p>
   <h3> What should I expect? </h3>
   <p>
   As an undergraduate, you should expect to commit around 4 hours per week to independent reading related to your project.
