Contact infor update

--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,9 @@ title:  'Contact'
 <div style="padding-top: 30px;" class="col-md-8">
   <h2 class="featurette-heading">  </h2>
   <p class="lead">
-  Please contact the program organizers with any questions.
-  <h4> Student Organizing Committee: </h4>
-  <p>
-    Emily Flanagan, Peter Gao, Bryan Martin, Anna Neufeld, Sarah Teichman
+    For Winter 2020, the members of the student organizing committee are
+    Emily Flanagan, Peter Gao, Bryan Martin, Anna Neufeld, and Sarah Teichman. Our faculty advisors are Dan Pollack and
+    Tyler McCormick.
     <br/>
   </p>
   <p class="lead">
@@ -23,11 +22,6 @@ title:  'Contact'
   <h4>Anna Neufeld (Graduate Student)</h4>
   <p>
     <strong>Email:</strong> aneufeld [a t] uw [d o t] edu <br/>
-    <br/>
-  </p>
-  <h4> Faculty Advisors (Winter 2020) </h4>
-  <p>
-    Dan Pollack and Tyler McCormick
     <br/>
   </p>
 </div>
