--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ from the mentor. </li>
          &nbsp;&nbsp;|&nbsp;&nbsp;
   <a href = "https://sites.uw.edu/wdrp"> UW Math DRP </a>
          &nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href = "stat.washington.edu"> UW Statistics</a>
+  <a href = "https://www.stat.washington.edu/"> UW Statistics</a>
          </p></center>
     </div>
  </div>
